--- a/Order/pom.xml
+++ b/Order/pom.xml
@@ -41,14 +41,15 @@
         <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 
     </dependency>
-<!--    <dependency>-->
-<!--        <groupId>org.springframework.cloud</groupId>-->
-<!--        <artifactId>spring-cloud-starter-sleuth</artifactId>-->
-<!--    </dependency>-->
-<!--    <dependency>-->
-<!--        <groupId>org.springframework.cloud</groupId>-->
-<!--        <artifactId>spring-cloud-sleuth-zipkin</artifactId>-->
-<!--    </dependency>-->
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-sleuth</artifactId>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-sleuth-zipkin</artifactId>
+
+    </dependency>
     <dependency>
         <groupId>org.springframework.kafka</groupId>
         <artifactId>spring-kafka</artifactId>
@@ -65,6 +66,12 @@
         <groupId>org.springdoc</groupId>
         <artifactId>springdoc-openapi-ui</artifactId>
         <version>1.5.13</version>
+    </dependency>
+    <dependency>
+        <groupId>com.prodig.micro</groupId>
+        <artifactId>Clients</artifactId>
+        <version>1.0-SNAPSHOT</version>
+        <scope>compile</scope>
     </dependency>
 
     <!--        <dependency>-->
