--- a/pom.xml
+++ b/pom.xml
@@ -15,16 +15,16 @@
     <module>eureka-server</module>
       <module>StockService</module>
     <module>Payment</module>
+      <module>Clients</module>
   </modules>
 
   <name>OrderMngmentMicro</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
-
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
   <dependencyManagement>
